Closed
Bug 1216916
Opened 4 years ago
Closed 4 years ago
Can no longer drag after some unknown event - node and document leak
Categories
(Core :: Widget, defect)
Not set
Tracking
()
RESOLVED
FIXED
mozilla44
People
(Reporter: karlt, Assigned: karlt)
References
Details
(Keywords: memory-leak)
Attachments
(2 files)
I'm seeing nsDragService::InvokeDragSession() returning early aborting the drag because mSourceNode is non-null. I don't have steps to reproduce, but I've seen these symptoms before. The only way to allow more drags to attach a debugger and set mSourceNode to null. mDoingDrag is false. That with non-null mSourceNode implies that StartDragSession() has not been called after a previous InvokeDragSession(). Nothing ensures that mSourceNode is reset after a failed InvokeDragSession(). mHasImage is true. Nothing ensure that it is reset after a failed InvokeDragSession().
Assignee | ||
Comment 1•4 years ago
|
||
The memory leak affects all platforms.
Keywords: mlk
OS: Linux → All
Summary: Can no longer drag after some unknown event → Can no longer drag after some unknown event - node and document leak
Assignee | ||
Comment 2•4 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=8a35bd7bb6d4
Assignee: nobody → karlt
Assignee | ||
Comment 3•4 years ago
|
||
bug 1216916 clean up when InvokeDragSession() fails r?roc
Attachment #8677107 -
Flags: review?(roc)
Assignee | ||
Comment 4•4 years ago
|
||
bug 1216916 clean up when InvokeDragSessionWithImage/Selection() fails r?roc
Attachment #8677108 -
Flags: review?(roc)
Attachment #8677107 -
Flags: review?(roc) → review+
Comment on attachment 8677107 [details] MozReview Request: bug 1216916 clean up when InvokeDragSession() fails r?roc https://reviewboard.mozilla.org/r/22885/#review20407
Comment on attachment 8677108 [details] MozReview Request: bug 1216916 clean up when InvokeDragSessionWithImage/Selection() fails r?roc https://reviewboard.mozilla.org/r/22887/#review20409
Attachment #8677108 -
Flags: review?(roc) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/01e2ab74a7f8 https://hg.mozilla.org/integration/mozilla-inbound/rev/5c2f2bdb911b
Comment 8•4 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/01e2ab74a7f8 https://hg.mozilla.org/mozilla-central/rev/5c2f2bdb911b
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Assignee | ||
Updated•4 years ago
|
status-firefox43:
--- → wontfix
You need to log in
before you can comment on or make changes to this bug.
Description
•