bug 1216916 clean up when InvokeDragSessionWithImage/Selection() fails r=roc

--HG--
extra : rebase_source : b889d5e90430957af59086ec2c66e8d83e700e2f